--- a/app/views/9-2-0/theres_a_problem.html
+++ b/app/views/9-2-0/theres_a_problem.html
@@ -14,7 +14,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-    	<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
+    	<div class="govuk-error-summary" aria-labelledby="error-summary-title" data-module="error-summary">
 		  <h2 class="govuk-error-summary__title" id="error-summary-title">
 		    ILR file not submitted
 		  </h2>
