--- a/app/views/9-2-0/what_data_do_you_want_to_submit.html
+++ b/app/views/9-2-0/what_data_do_you_want_to_submit.html
@@ -27,7 +27,7 @@
       </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas" disabled>
+        <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-2">
         EAS (Earnings Adjustment Statement) 
       </label>
