--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,18 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+     <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.2.5</th>
+        <td class="govuk-table__cell ">
+          <ul class="govuk-list govuk-list--bullet">
+            <p>We:</p>
+            <li>updated the content</li>
+            <p>(inc. addition of error summary<br>& warning to the 'There's a problem'<br>page)</p>
+          </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-2-5/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-2-5/start.html">Start now</a></td>
+    </tr>
 	  <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.2.0</th>
     		<td class="govuk-table__cell ">
@@ -38,6 +50,18 @@
         </td>
         <td class="govuk-table__cell "><a href="9-2-0/contents.html">Contents</a></td>
 		    <td class="govuk-table__cell "><a href="./9-2-0/start.html">Start now</a></td>
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.1.5</th>
+        <td class="govuk-table__cell ">
+          <ul class="govuk-list govuk-list--bullet">
+            <p>We:</p>
+            <li>updated the content</li>
+            <li>added EAS and ESF flow</li>  
+          </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-1-5/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-1-5/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.1.0</th>
