--- a/app/views/9-2-5/what_data_do_you_want_to_submit.html
+++ b/app/views/9-2-5/what_data_do_you_want_to_submit.html
@@ -27,13 +27,13 @@
       </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas">
+        <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas" onclick="this.blur(); document.getElementById('what-to-submit-1').click()">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-2">
         EAS (Earnings Adjustment Statement) 
       </label>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf">
+        <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf" onclick="this.blur(); document.getElementById('what-to-submit-1').click()">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
         ESF (European Social Fund) supplementary data
       </label>
