--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,17 @@
   </thead>
   <tbody class="govuk-table__body">
      <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.3.0</th>
+        <td class="govuk-table__cell ">
+          <ul class="govuk-list govuk-list--bullet">
+            <p></p>
+            <p>Based on stopped version 9-2-5, includes EAS screenshots</p>
+          </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-2-5/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-2-5/start.html">Start now</a></td>
+    </tr>
+     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.2.5</th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
