--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -11,6 +11,8 @@ $govuk-global-styles: true;
 
 // Components that aren't in Frontend
 @import "components/cookie-banner";
+@import "components/button";
+@import "components/success-summary";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
