--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,6 +28,17 @@
   </thead>
   <tbody class="govuk-table__body">
      <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.3.1</th>
+        <td class="govuk-table__cell ">
+          <ul class="govuk-list govuk-list--bullet">
+            <p>We:</p>
+            <li>added the EAS journey</li>
+          </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-3-1/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-1/start.html">Start now</a></td>
+    </tr>
+     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.0</th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
