--- a/app/views/9-3-1/contents.html
+++ b/app/views/9-3-1/contents.html
@@ -32,21 +32,17 @@
 			<li><a href="return-period.html">Return period</a></li>
 		</ul>
 
+		<h2 class="govuk-heading-l">EAS (Happy Path)</h2>
 
-		<h2 class="govuk-heading-l">EAS</h2>
-
-		<form id="myForm" action="screenshotview" method="get" class="form">
-			<input type="hidden" name="number" value="" id="number" />
-			<div class="govuk-form-group">
-				<ul class="govuk-list govuk-list--number">
-					<li><a href="#" onclick="document.getElementById('number').value = 1; document.getElementById('myForm').submit()">Manage EAS</a></li>
-					<li><a href="#" onclick="document.getElementById('number').value = 2; document.getElementById('myForm').submit()">Choose programme</a></li>
-					<li><a href="#" onclick="document.getElementById('number').value = 3; document.getElementById('myForm').submit()">Add claim details</a></li>
-					<li><a href="#" onclick="document.getElementById('number').value = 4; document.getElementById('myForm').submit()">Add claim details - complete</a></li>
-					<li><a href="#" onclick="document.getElementById('number').value = 5; document.getElementById('myForm').submit()">Manage EAS - updated</a></li>
-				</ul>
-			</div>
-		</form>
+		<ul class="govuk-list govuk-list--number">
+			<li><a href="start.html">Start page</a></li>
+		  	<li><a href="idams.html">IDAMS</a></li>
+		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
+			<li><a href="manage_your_eas.html">Manage your earning adjustment statements</a></li>
+			<li><a href="choose_programme.html">Choose programme</a></li>
+			<li><a href="add_claim_details.html">Add claim details</a></li>
+			<li><a href="manage_your_eas_added.html">Claim added</a></li>
+		</ul>
 
 		<h2 class="govuk-heading-l">ESF User Journey (Happy Path)</h2>
 		
