--- a/app/views/9-3-2/manage_your_eas.html
+++ b/app/views/9-3-2/manage_your_eas.html
@@ -13,7 +13,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full"> 
-    <form action="choose_programme" method="get" class="form">
+    <form action="#" method="get" class="form">
 	     <h1 class="govuk-heading-xl"> <span class="govuk-caption-xl">2018 to 2019</span>Manage your earning adjustment statement</h1>
 
        <div class="govuk-error-summary govuk-info-summary govuk-!-margin-bottom-5" aria-labelledby="info-summary-title" data-module="info-summary">
