--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,9 +32,9 @@
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
            <p>We added:</p>
-            <li>overlapping periods</li>
+            <!--<li>overlapping periods</li>-->
             <li>period closed</li>
-              <li>iteration of the reports pages</li>
+            <li>iteration of the reports pages</li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-2/contents.html">Contents</a></td>
@@ -47,7 +47,7 @@
            <p>We added:</p>
             <li>multiple uploads for ESF</li>
             <li>iterated uploading page</li>
-              <li>iteration of the reports pages</li>
+            <li>iteration of the reports pages</li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-1/contents.html">Contents</a></td>
